--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@remixicon/react": "^4.8.0",
     "axios": "^1.13.2",
+    "framer-motion": "^12.24.12",
     "lucide-react": "^0.553.0",
     "next": "16.0.10",
     "react": "19.2.0",
