--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.8.0",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.2",
     "framer-motion": "^12.24.12",
     "lucide-react": "^0.553.0",
